--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-dom": "^16.0.0-alpha.11",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-rte": "^0.11.0",
     "react-spark-scroll": "^3.0.2",
     "redux": "^3.6.0",
     "redux-orm": "^0.9.0-rc.3",
