--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "dependencies": {
     "classnames": "^2.2.0",
     "dompurify": "^0.8.9",
+    "gsap": "^1.19.1",
     "humps": "^2.0.0",
     "invariant": "^2.2.2",
     "jwt-decode": "^2.1.0",
@@ -99,18 +100,20 @@
     "rc-notification": "^1.4.2",
     "rc-pagination": "^1.8.9",
     "rc-tooltip": "^3.4.3",
-    "react": "^16.0.0-alpha.11",
+    "react": "^16.0.0-alpha.12",
     "react-addons-create-fragment": "^15.5.4",
     "react-css-themr": "^2.0.0",
-    "react-dom": "^16.0.0-alpha.11",
+    "react-dom": "^16.0.0-alpha.12",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-rte": "^0.11.0",
     "react-spark-scroll": "^3.0.2",
+    "react-spark-scroll-rekapi": "^3.0.2",
     "redux": "^3.6.0",
     "redux-orm": "^0.9.0-rc.3",
     "redux-thunk": "^2.0.0",
     "reselect": "^2.5.4",
+    "underscore": "^1.8.3",
     "url-lib": "^2.0.2",
     "viewport-js": "^1.0.0",
     "warning": "^3.0.0"
