--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-rte": "^0.11.0",
+    "react-scroll": "^1.5.2",
     "react-spark-scroll": "^3.0.2",
     "react-spark-scroll-rekapi": "^3.0.2",
     "redux": "^3.6.0",
