--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ node_js:
 cache:
   directories:
     - node_modules
-
-install:
-  - npm install -g yarn
-  - yarn install
-
+    
 script:
-  - npm run deploy:dev
-  - npm run deploy:prod
+  - npm run lint
+  - npm test
 
 after_success:
   - npm run codecov
