--- a/examples/package.json
+++ b/examples/package.json
@@ -86,6 +86,7 @@
     "react-addons-create-fragment": "^15.5.4",
     "react-css-themr": "^2.0.0",
     "react-dom": "^16.0.0-alpha.12",
+    "react-quietwater": "^0.1.6",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-rte": "^0.11.0",
@@ -125,7 +126,7 @@
     "cheerio": "^0.22.0",
     "codecov": "^1.0.1",
     "compression": "^1.6.2",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.4",
     "cssnano": "^3.7.4",
     "debug": "^2.2.0",
     "enzyme": "^2.0.0",
@@ -153,7 +154,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
     "mocha": "^3.0.1",
-    "node-sass": "^4.0.0",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
     "postcss-loader": "^1.1.0",
@@ -163,9 +164,9 @@
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
+    "webpack": "^1.15.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2",
     "yargs": "^6.3.0"
