--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-sudo: false
 language: node_js
 
-node_js:
-  - "6"
-    
+node_js: "6"
+
 script:
   - npm run lint
-  - npm test
-
-after_success:
-  - npm run codecov
+  - npm run build
+  - npm run test
