--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prebuild": "npm run clean",
     "build": "cd ./node_modules/.bin && babel ../../src --out-dir ../../lib",
     "flow": "flow",
-    "lint": "eslint bin build config server src tests",
+    "lint": "eslint examples server src tests",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:dev": "npm run test -- --watch",
@@ -86,7 +86,7 @@
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-react-css-modules": "^2.1.3",
+    "babel-plugin-react-css-modules-ne-smalltown": "^2.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
