--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "clean": "rimraf ./lib",
     "prebuild": "npm run clean",
-    "build": "cd ./node_modules/.bin && babel ../../src --out-dir ../../lib && cd ../../ && node ./bin/build",
+    "build": "cd ./node_modules/.bin && babel ../../src --ignore ../../src/examples --out-dir ../../lib && cd ../../ && node ./bin/build",
     "flow": "flow",
     "lint": "eslint examples server src tests",
     "lint:fix": "npm run lint -- --fix",
@@ -61,16 +61,16 @@
     "rc-notification": "^1.4.2",
     "rc-pagination": "^1.8.9",
     "rc-tooltip": "^3.4.3",
-    "react": "^16.0.0-beta.5",
+    "react": "^16.0.0-rc.2",
     "react-addons-create-fragment": "^15.5.4",
     "react-css-themr": "^2.0.0",
-    "react-dom": "^16.0.0-beta.5",
+    "react-dom": "^16.0.0-rc.2",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "react-rte": "^0.11.0",
+    "react-rte": "^0.14.2",
     "react-scroll": "^1.5.4",
-    "react-spark-scroll": "^3.0.2",
-    "react-spark-scroll-rekapi": "^3.0.2",
+    "react-spark-scroll": "^4.0.0",
+    "react-spark-scroll-rekapi": "^4.0.0",
     "redux": "^3.6.0",
     "redux-orm": "^0.9.0-rc.3",
     "redux-thunk": "^2.0.0",
@@ -86,7 +86,7 @@
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-react-css-modules-ne-smalltown": "^2.8.0",
+    "babel-plugin-react-css-modules-ne-smalltown": "^2.8.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -117,11 +117,11 @@
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "flow-bin": "^0.45.0",
     "fs-extra": "^1.0.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.30.1",
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
     "jest": "^19.0.2",
@@ -134,21 +134,21 @@
     "karma-webpack-with-fast-source-maps": "^1.9.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.1",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
-    "node-sass": "^4.5.3",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
     "yargs": "^6.3.0"
   }
 }
