--- a/src/examples/package.json
+++ b/src/examples/package.json
@@ -83,14 +83,14 @@
     "rc-pagination": "^1.8.9",
     "rc-select": "^6.8.8",
     "rc-tooltip": "^3.4.3",
-    "react": "^16.0.0-beta.5",
+    "react": "^16.0.0-rc.2",
     "react-addons-create-fragment": "^15.5.4",
     "react-css-themr": "^2.0.0",
-    "react-dom": "^16.0.0-beta.5",
+    "react-dom": "^16.0.0-rc.2",
     "react-quietwater": "^0.2.3",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "react-rte": "^0.11.0",
+    "react-rte": "^0.14.2",
     "react-scroll": "^1.5.4",
     "react-spark-scroll": "^4.0.0",
     "react-spark-scroll-rekapi": "^4.0.0",
@@ -109,7 +109,7 @@
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-react-css-modules-ne-smalltown": "^2.1.3",
+    "babel-plugin-react-css-modules-ne-smalltown": "^2.8.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -139,11 +139,11 @@
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "flow-bin": "^0.45.0",
     "fs-extra": "^1.0.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.30.1",
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
     "jest": "^19.0.2",
@@ -158,7 +158,7 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "rimraf": "^2.5.4",
@@ -167,9 +167,9 @@
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.15.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
     "yargs": "^6.3.0"
   }
 }
