--- a/src/examples/package.json
+++ b/src/examples/package.json
@@ -67,41 +67,15 @@
       }
     }
   },
+  "peerDependencies": {
+    "react": "^16.0.0-rc",
+    "react-dom": "^16.0.0-rc"
+  },
   "dependencies": {
-    "classnames": "^2.2.0",
-    "dompurify": "^0.8.9",
-    "gsap": "^1.19.1",
-    "humps": "^2.0.0",
-    "invariant": "^2.2.2",
-    "jwt-decode": "^2.1.0",
-    "lodash": "4.17.4",
-    "moment": "^2.18.0",
-    "normalize.css": "^5.0.0",
-    "normalizr": "3.2.2",
-    "object-assign": "^4.1.1",
-    "rc-notification": "^1.4.2",
-    "rc-pagination": "^1.8.9",
-    "rc-select": "^6.8.8",
-    "rc-tooltip": "^3.4.3",
-    "react": "^16.0.0-rc.2",
-    "react-addons-create-fragment": "^15.5.4",
-    "react-css-themr": "^2.0.0",
-    "react-dom": "^16.0.0-rc.2",
-    "react-quietwater": "^0.2.3",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "react-rte": "^0.14.2",
-    "react-scroll": "^1.5.4",
-    "react-spark-scroll": "^4.0.0",
-    "react-spark-scroll-rekapi": "^4.0.0",
-    "redux": "^3.6.0",
-    "redux-orm": "^0.9.0-rc.3",
-    "redux-thunk": "^2.0.0",
-    "reselect": "^2.5.4",
-    "underscore": "^1.8.3",
     "url-lib": "^2.0.2",
-    "viewport-js": "^1.0.0",
-    "warning": "^3.0.0"
+    "prop-types": "^15.5.10",
+    "rc-select": "^6.8.8",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
