--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild": "npm run clean",
     "build": "./node_modules/.bin/babel src --out-dir lib --ignore src/examples/* && node ./bin/build",
     "flow": "flow",
-    "lint": "eslint examples server src tests",
+    "lint": "eslint src tests",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:dev": "npm run test -- --watch",
