--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "transform-decorators-legacy",
     "transform-object-rest-spread",
     "transform-export-extensions",
+    "transform-class-properties",
     [
       "babel-plugin-react-css-modules-ne-smalltown",
       {
